Fix overflow of messengerBody

--- a/src/App.css
+++ b/src/App.css
@@ -9,5 +9,5 @@
 }
 
 body{
-  font-family: 'Noto Sans JP', sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
