--- a/src/Components/Header.styles.css
+++ b/src/Components/Header.styles.css
@@ -3,6 +3,7 @@
     height: 7%;
     padding: 5px;
     min-height: 60px;
+    font-family: 'Noto Sans JP', sans-serif;
 
 }
 
@@ -20,7 +21,7 @@
 }
 
 .logout-btn:active{
-    background-color: rgb(146, 138, 128);
+    background-color: rgb(146, 138, 128, 0.6);
     transition: 0.2s;
 }
 
